--- a/views/layout/partials/navigation.ejs
+++ b/views/layout/partials/navigation.ejs
@@ -16,7 +16,7 @@
         <li class="nav-item dropdown">
           <a
             href="/speakers"
-            class="nav-link dropdown-toggle"
+            class="nav-link dropdown-toggle"ç
             href="#"
             id="navbarDropdown"
             role="button"
@@ -29,9 +29,10 @@
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="/speakers">All Speakers</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Lorenzo Garcia</a>
-            <a class="dropdown-item" href="./Hillary_Goldwynn.html">Hilary Goldywynn Post</a>
-            <a class="dropdown-item" href="#">Riley Rudolph Rewington</a>
+
+            <% speakerNames.forEach(funtion(speaker) {%>
+            <a class="dropdown-item" href="/speakers/<%=speaker.shortname%>"></a><%=speaker.name%>
+            <%}) %>
           </div>
         </li>
         <li class="nav-item"><a href="/feedback" class="nav-link">Feedback</a></li>
