--- a/views/layout/partials/navigation.ejs
+++ b/views/layout/partials/navigation.ejs
@@ -16,7 +16,8 @@
         <li class="nav-item dropdown">
           <a
             href="/speakers"
-            class="nav-link dropdown-toggle"ç
+            class="nav-link dropdown-toggle"
+            ç
             href="#"
             id="navbarDropdown"
             role="button"
@@ -30,9 +31,9 @@
             <a class="dropdown-item" href="/speakers">All Speakers</a>
             <div class="dropdown-divider"></div>
 
-            <% speakerNames.forEach(funtion(speaker) {%>
-            <a class="dropdown-item" href="/speakers/<%=speaker.shortname%>"></a><%=speaker.name%>
-            <%}) %>
+            <% speakerNames.forEach(function (speaker) {%>
+            <a class="dropdown-item" href="/speakers/<%=speaker.shortname%>"><%=speaker.name%></a>
+            <%})%>
           </div>
         </li>
         <li class="nav-item"><a href="/feedback" class="nav-link">Feedback</a></li>
