--- a/views/pages/partials/topSpeakers.ejs
+++ b/views/pages/partials/topSpeakers.ejs
@@ -6,7 +6,7 @@
         <h4 class="speakerslist-title"><%=speaker.title%></h4>
         <div class="speakerslist-name">
           with
-          <a href="./Hillary_Goldwynn.html"><%=speaker.shortname%><%=speaker.name%></a>
+          <a href="./Hillary_Goldwynn.html"><%speaker.shortname%><%=speaker.name%></a>
         </div>
         <p class="speakerslist-info mt-2">
           <a href="/speakers/<%=speaker.shortname%>">
